ya contest